--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,22 @@
                 <i class="fas fa-basketball-ball"></i>
                 <span>NBA</span>
             </a>
+            <a href="/mushrooms" class="nav-item">
+                <i class="fas fa-seedling"></i>
+                <span>Mushrooms</span>
+            </a>
+            <a href="/airline" class="nav-item">
+                <i class="fas fa-plane"></i>
+                <span>Airline</span>
+            </a>
+            <a href="/life-expectancy" class="nav-item">
+                <i class="fas fa-globe-americas"></i>
+                <span>Life Expectancy</span>
+            </a>
+            <a href="/census" class="nav-item">
+                <i class="fas fa-flag-usa"></i>
+                <span>Census</span>
+            </a>
         </nav>
     </aside>
     
