--- a/templates/base.html
+++ b/templates/base.html
@@ -85,6 +85,30 @@
                 <i class="fas fa-flag-usa"></i>
                 <span>Census</span>
             </a>
+            <a href="/honey" class="nav-item">
+                <i class="fas fa-jar"></i>
+                <span>Honey Production</span>
+            </a>
+            <a href="/features" class="nav-item">
+                <i class="fas fa-cogs"></i>
+                <span>Feature Transformation</span>
+            </a>
+            <a href="/biodiversity" class="nav-item">
+                <i class="fas fa-tree"></i>
+                <span>Biodiversity</span>
+            </a>
+            <a href="/familiar" class="nav-item">
+                <i class="fas fa-dna"></i>
+                <span>Familiar</span>
+            </a>
+            <a href="/fetchmaker" class="nav-item">
+                <i class="fas fa-dog"></i>
+                <span>Fetchmaker</span>
+            </a>
+            <a href="/ab-test" class="nav-item">
+                <i class="fas fa-vial"></i>
+                <span>A/B Testing</span>
+            </a>
         </nav>
     </aside>
     
